added the chef slide just enough ruby for chef